# Heavens

./: .gitignore  Cargo.toml  README.md  index.html  parameters.json  rustfmt.toml  styles.css
scripts/: smooth.sh
src/: calculate_massive_positions.wgsl  camera.rs  galaxy.rs  gravity.rs  hardware.rs  input.rs  invert.wgsl  lib.rs  main.rs  memory.rs  nbody.rs  parameters.rs  particle.rs  pipelines.rs  render.rs  render.wgsl  render_massive_positions.wgsl  render_triangles.wgsl  settings.rs  shader.cl  shader.wgsl  simulation.rs  state.rs
src/shaders/: calculate_ghost_forces.wgsl  calculate_ghost_positions.wgsl  calculate_ghost_velocities.wgsl  calculate_massive_forces.wgsl  calculate_massive_positions.wgsl  calculate_massive_velocities.wgsl  display.wgsl  filter_gaussian_blur_horizontal.wgsl  filter_gaussian_blur_vertical.wgsl  pre_render_ghost_particles.wgsl  render_ghost_particles.wgsl  render_massive_particles.wgsl
