[package]
name = "heavens"
version = "0.3.0"
edition = "2021"
authors = ["Freddy Wordingham <freddy@digilab.co.uk>"]
description = "N-body GPU simulations with rendering"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
env_logger = "0.10.0"
log = "0.4.20"
wgpu = "0.17.1"
winit = "0.28.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["Document", "Window", "Element"] }
wgpu = { version = "0.17.1", features = ["webgl"] }
