[package]
name = "heavens"
version = "0.4.0"
edition = "2021"
authors = ["Freddy Wordingham <freddy@digilab.co.uk>"]
description = "N-body GPU simulations with rendering"
repository = "https://github.com/FreddyWordingham/heavens"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
pollster = "0.3.0"
rand = "0.8.5"
wgpu = "0.17.1"
winit = "0.28.7"
